# private-assistant-ground-station-py

./: .copier-answers.yml  .gitignore  CHANGELOG.md  Containerfile  README.md  pyproject.toml
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: container-build-pr.yml  container-build-push.yml  python_code_quality.yml
docs/: main.md
src/app/: main.py
src/app/utils/: client_config.py  config.py  models.py  processing_sound.py  speech_recognition_tools.py  support_utils.py
tests/: conftest.py  test_client_config.py  test_config.py  test_main.py  test_processing_sound.py  test_speech_recognition_tools.py  test_support_utils.py
