[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[project]
name = "app"
version = "0.6.0"
description = "Ground Station is an open-source endpoint that receives audio from satellites and handles STT/TTS processing for smart assistant systems."
authors = [{ name = "stkr22", email = "stkr22@github.com" }]
readme = "README.md"
license = "GPL-3.0-only"
license-files = [
    "LICENSE",
]

keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Home Automation",
]

requires-python = ">=3.12,<3.14"
dependencies = [
    "httpx~=0.28.1",
    "pyyaml~=6.0.1",
    "pydantic",
    "private-assistant-commons~=5.4.0",
    "fastapi[standard]~=0.119.1",
    "aiomqtt",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/stkr22/private-assistant-ground-station-py"
Repository = "https://github.com/stkr22/private-assistant-ground-station-py"
Documentation = "https://github.com/stkr22/private-assistant-ground-station-py/tree/main/docs"
Issues = "https://github.com/stkr22/private-assistant-ground-station-py/issues"
Changelog = "https://github.com/stkr22/private-assistant-ground-station-py/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "ruff~=0.14.2",
    "mypy~=1.18.0",
    "pytest~=8.4.1",
    "pytest-cov~=6.2.1",
    "pytest-asyncio~=0.26.0",
    "types-pyyaml~=6.0.12.20240311",
    "websockets~=14.1",
    "pytest-xdist~=3.6.0",
    "coverage[toml]~=7.6.0",
]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # pylint
    "RUF", # ruff-specific rules
    "TCH", # flake8-type-checking
]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
]
